[package]
name = "data-concentrator-mb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "*", default-features = false, features = ["tcp"] }
mongodb = "2.6.0"
serde = "*"
futures = "*"
reqwest = { version = "*", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

